增加自动检测文件损坏功能，修复线损工具重复运行bug

--- a/8.SKO.W618U.1_638BU/CVTE_MES.ini
+++ b/8.SKO.W618U.1_638BU/CVTE_MES.ini
@@ -116,6 +116,8 @@ CauseNo=SKO.WB638U.1_668BU
 
 //直通率阈值
 first_PASS_yield = 70
+//文件损坏检测周期
+CheckDamageTime = 5000
 
 [TestData]
 /*频偏校准数据sCalFreqDataStruct*/
